--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build and push the image
         run : |
-          docker login --username sertzu --password ${{ secrets.GH_PAT }} ghcr.io
+          docker login --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN  }} ghcr.io
           docker build . --tag ghcr.io/sertzu/letf-frontend:prod
           docker push ghcr.io/sertzu/letf-frontend:prod
