--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@remix-run/react": "^2.12.0",
     "@remix-run/serve": "^2.12.0",
     "@types/matter-js": "^0.19.7",
+    "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "lucide-react": "^0.439.0",
     "matter-js": "^0.20.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "recharts": "^2.12.7",
